--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "getherbert/framework": "~0.9",
     "facebook/webdriver": "~1.0",
     "jarednova/mesh": "*",
-    "behat/behat": "~2.5",
-    "shortlist-digital/agreable-longform-plugin": "2.*"
+    "behat/behat": "~2.5"
   },
   "config": {
       "bin-dir": "bin/"
