--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "getherbert/framework": "~0.9",
+    "shortlist-digital/herbert-framework": "~1.0",
     "facebook/webdriver": "~1.0",
     "jarednova/mesh": "*",
     "behat/behat": "~2.5"
